[metadata]
name = cock
version = 0.5.0
url = https://github.com/pohmelie/cock
author = pohmelie
author_email = multisosnooley@gmail.com
description = configuration with click builder
long_description = file: readme.md
long_description_content_type = text/markdown
license = MIT
license_file = license.txt
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3

[options]
py_modules = cock
python_requires = >= 3.7
install_requires =
    click >= 7.1.0
    addict >= 2.2.0
    pyyaml >= 5.0.0

[options.extras_require]
dev =
    pytest
    pytest-cov
    flake8
